--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,4 +1,6 @@
-<h1>Landing page!</h1>
+<%- include("partials/header")%>
+    <h1>Landing page!</h1>
 
-<p>Welcome to YelpCamp</p>
-<a href="/campgrounds">View All Campgrounds</a>
+    <p>Welcome to YelpCamp</p>
+    <a href="/campgrounds">View All Campgrounds</a>
+    <%- include("partials/footer")%>
